// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Popover container should pass onClose callback when closable 1`] = `
<div
  className="popover"
  onClick={[Function]}
  style={Object {}}
>
  <div>
    custom_component_child{"print":false}
  </div>
</div>
`;

exports[`common/Popover container should pass print=false when the popover is not listed in redux 1`] = `
<div
  className="popover"
  onClick={undefined}
  style={Object {}}
>
  <div>
    custom_component_child{"print":false}
  </div>
</div>
`;

exports[`common/Popover container should pass print=true when the popover IS listed in redux 1`] = `
<div
  className="popover print"
  onClick={undefined}
  style={Object {}}
>
  <div>
    custom_component_child{"print":true}
  </div>
</div>
`;

exports[`common/Popover graphical (JSX) should add children 1`] = `
<div
  className="popover"
  onClick={undefined}
  style={Object {}}
>
  <div>
    custom_2{"print":false}
  </div>
</div>
`;

exports[`common/Popover graphical (JSX) should add custom className 1`] = `
<div
  className="popover custom"
  onClick={undefined}
  style={Object {}}
>
  <div>
    custom_component_child{"print":false}
  </div>
</div>
`;

exports[`common/Popover graphical (JSX) should add custom style 1`] = `
<div
  className="popover"
  onClick={undefined}
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <div>
    custom_component_child{"print":false}
  </div>
</div>
`;

exports[`common/Popover graphical (JSX) should be print when asked for and passed it to child 1`] = `
<div
  className="popover print"
  onClick={undefined}
  style={Object {}}
>
  <div>
    custom_component_child{"print":true}
  </div>
</div>
`;

exports[`common/Popover graphical (JSX) should have a default behaviour 1`] = `
<div
  className="popover"
  onClick={undefined}
  style={Object {}}
>
  <div>
    custom_component_child{"print":false}
  </div>
</div>
`;

exports[`common/Popover graphical (JSX) should pass onClose function to child 1`] = `
<div
  className="popover"
  onClick={[Function]}
  style={Object {}}
>
  <div>
    custom_component_child{"print":false}
  </div>
</div>
`;
